Update .bzrignore to ignore *.aux files.

--- a/.bzrignore
+++ b/.bzrignore
@@ -1,7 +1,6 @@
 .log
-authors.aux
+*.aux
 bibliography.bib.bak
-book.aux
 book.bbl
 book.blg
 book.dvi
@@ -13,43 +12,3 @@ book.out
 book.pdf
 book.ps
 book.toc
-appendix/notation.aux
-chapters/alnes-1/chapter.aux
-chapters/alnes-2/chapter.aux
-chapters/alnes-3/chapter.aux
-chapters/antiga/chapter.aux
-chapters/hake/chapter.aux
-chapters/hentschel/chapter.aux
-chapters/hoffman-1/chapter.aux
-chapters/hoffman-2/chapter.aux
-chapters/hoffman-3/chapter.aux
-chapters/hoffman-4/chapter.aux
-chapters/intro/chapter.aux
-chapters/kirby-1/chapter.aux
-chapters/kirby-2/chapter.aux
-chapters/kirby-3/chapter.aux
-chapters/kirby-4/chapter.aux
-chapters/kirby-5/chapter.aux
-chapters/kirby-6/chapter.aux
-chapters/kirby-7/chapter.aux
-chapters/kvs-1/chapter.aux
-chapters/kvs-2/chapter.aux
-chapters/langtangen/chapter.aux
-chapters/lezar/chapter.aux
-chapters/logg-1/chapter.aux
-chapters/logg-2/chapter.aux
-chapters/logg-3/chapter.aux
-chapters/logg-4/chapter.aux
-chapters/lopes/chapter.aux
-chapters/mardal-2/chapter.aux
-chapters/mardal-4/chapter.aux
-chapters/nikbakht/chapter.aux
-chapters/oelgaard-1/chapter.aux
-chapters/oelgaard-2/chapter.aux
-chapters/rognes/chapter.aux
-chapters/schroll/chapter.aux
-chapters/selim/chapter.aux
-chapters/shan/chapter.aux
-chapters/skavhaug/chapter.aux
-chapters/terrel/chapter.aux
-chapters/wilbers/chapter.aux
